# ecat_master_advr

./: .gitignore  CMakeLists.txt
cmake/: FindXenomai.cmake
include/iit/ecat/advr/: aux_pdo.h  ec_boards_iface.h  esc.h  foot_sensor_esc.h  ft6_esc.h  hub_esc.h  imu_Vn_esc.h  log_esc.h  lxm32i_esc.h  lxm32i_reg.h  mc_centAC_esc.h  mc_hand_esc.h  mc_hipwr_esc.h  mc_lowpwr_esc.h  motor_iface.h  pipes.h  power_board.h  power_coman_board.h  power_f28m36_board.h  pressure_sensor_esc.h  rt_ipc.h  skin_sensor_esc.h  test_esc.h
protobuf/: CMakeLists.txt  ecat_pdo.proto  imu_pdo.proto  motor_pdo.proto  skin_sens_pdo.proto
src/: ec_boards_iface.cpp  foot_sensor_esc.cpp  imu_Vn_esc.cpp  lxm32i_esc.cpp  mc_centAC_esc.cpp  mc_hand_esc.cpp  mc_hipwr_esc.cpp  mc_lowpwr_esc.cpp  power_f28m36_board.cpp  pressure_sensor_esc.cpp  rt_ipc.cpp  skin_sensor_esc.cpp
